LDEV-4739 updating labels for learner
Update English, Spanish and Greek.

--- a/lams_learning/conf/language/lams/ApplicationResources.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = learner_java
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue Jul 03 17:58:06 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Dec 27 23:28:42 CST 2018 
  
 #=================== labels for Learner (Java) =================# 
 
@@ -51,8 +51,8 @@ mynotes.entry.submitted.by  =Submitted by: {0}
 label.close.button  =Close
 mynotes.journals.title  =Journals
 mynotes.entry.no.title.label  =No title
-message.progress.broken  =Your teacher is currently editing the lesson. As soon as the changes are applied you will be able to continue. 
-message.progress.broken.try.resume  =Close and reopen this window to continue. If this message re-occurs, wait a few minutes and then try again.
+message.progress.broken  =An error has occurred and you cannot continue without LAMS recalculating your current activity. A staff member may be editing the lesson.
+message.progress.broken.try.resume  =Close and reopen this window to continue. If this error re-occurs, wait a few minutes and then try again.
 label.branching.wait.message  =You have stopped at a branching point. You cannot continue until your branch is allocated in Monitoring.
 label.branching.refresh.message  =Click Next if you are told that the branch has been selected. This page will refresh automatically in 1 minute.
 label.branching.preview.message  =You have reached a branching activity. As you are in preview you can select which branch to preview then click Choose. Click Finish to skip the branching and continue with the next activity after the branching.
@@ -150,7 +150,7 @@ label.kumalive.report.last.name  =Last name
 label.kumalive.report.login  =Login
 label.kumalive.report.attempt  =Attempt
 label.kumalive.report.average  =Average
-label.kumalive.report.time  =Date and time
+label.kumalive.report.time  =Time
 message.kumalive.report.load.error  =Error while loading data for report
 button.kumalive.ok  =OK
 button.kumalive.report.export.all  =Export all
@@ -182,13 +182,14 @@ message.kumalive.poll.release.voters.confirm  =Are you sure you want to show pol
 label.kumalive.poll.missing.voters  =Not voted
 label.kumalive.poll.results  =Results
 label.kumalive.poll.votes.total  =Total votes
-button.kumalive.poll.chart.switch =Switch chart
 audit.activity.started  =Learner {0} ({1}) started activity {2} ({3})
 audit.activity.stopped  =Learner {0} ({1}) stopped activity {2} ({3})
 audit.learner.lesson.complete  =Learner {0} ({1}) completed lesson {2} ({3})
-outcome.authoring.title =Learning outcomes
-outcome.authoring.input =Search and select by outcome name or code
-outcome.authoring.existing =Added outcomes
-outcome.authoring.existing.none =none
+outcome.authoring.title  =Learning outcomes
+outcome.authoring.input  =Search and select by outcome name or code
+outcome.authoring.existing  =Added outcomes
+outcome.authoring.existing.none  =none
+button.kumalive.poll.chart.switch  =Switch chart
 
-#======= End labels: Exported 179 labels for en AU =====
+
+#======= End labels: Exported 184 labels for en AU =====
