--- a/lams_learning/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = learner_java
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue Jul 03 17:57:27 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Dec 27 23:28:39 CST 2018 
  
 #=================== labels for Learner (Java) =================# 
 
@@ -185,6 +185,11 @@ label.kumalive.poll.votes.total  =Votos totales
 audit.activity.started  =Estudiante {0} ({1}) comenz\u00f3 actividad {2} ({3})
 audit.activity.stopped  =Estudiante {0} ({1}) complet\u00f3 actividad {2} ({3})
 audit.learner.lesson.complete  =Estudiante {0} ({1}) complet\u00f3 lecci\u00f3n {2} ({3})
+outcome.authoring.title  =Objetivos de aprendizaje
+outcome.authoring.input  =Busque y seleccione objetivo por nombre o c\u00f3digo
+outcome.authoring.existing  =Objetivos a\u00f1adidos
+outcome.authoring.existing.none  =ninguno
+button.kumalive.poll.chart.switch  =Cambiar gr\u00e1fico
 
 
-#======= End labels: Exported 179 labels for es ES =====
+#======= End labels: Exported 184 labels for es ES =====
