LDEV-4739 updating labels for central
Updating Greek, English and Español

--- a/lams_central/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = lams_central
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Aug 12 08:51:01 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 00:17:34 CST 2018 
  
 #=================== labels for LAMS Central =================# 
 
@@ -176,11 +176,8 @@ label.yes  =S\u00ed
 label.no  =No
 label.ok  =OK
 title.forgot.password  =LAMS :: Recuperar Contrase\u00f1a
-label.forgot.password.confirm  =Recuperar Contrase\u00f1a
 forgot.password.email.subject  =LAMS - Cambio de Contrase\u00f1a
 forgot.password.email.body  =Copie el enlace a su navegador de internet para poder cambiar su contrase\u00f1a.
-forgot.password.email.sent  =Se ha enviado un mensaje a su correo electr\u00f3nico.
-error.user.not.found  =No se han encontrado su usuario en este servidor LAMS. Verifique su nombre de usuario y correo electr\u00f3nico.
 error.support.email.not.set  =No se ha podido enviar el correo electr\u00f3nico ya que el servidor no ha sido configurado para enviar mensajes de correo. Contacte a su administrador de sistema.
 error.password.request.expired  =El enlace para cambiar su contrase\u00f1a ha expirado. Por favor vuelva a solicitar su contrase\u00f1a nuevamente.
 label.forgot.password.instructions.1  =Por favor ingrese su nombre de usuario O su correo electr\u00f3nico. Un correo le ser\u00e1 enviado brevemente con un enlace para que cambie su contrase\u00f1a. Solo necesita uno de los siguientes datos.
@@ -189,7 +186,6 @@ label.forgot.password.email  =Ingrese correo electr\u00f3nico
 label.forgot.password.username  =Ingrese nombre de usuario
 error.forgot.password.fields  =Se requiren los dos campos. Intente nuevamente.
 error.email.not.sent  =El servidor no ha podido enviar el mensaje. Por favor comuniquese con el administrador de sistema.
-error.email.not.found  =No se ha encontrado un usuario que tenga el correo electr\u00f3nico mencionado. Verifique su correo electr\u00f3nico e intente nuevamente.
 error.forgot.password.email  =Ingrese correo electr\u00f3nico
 error.forgot.password.username  =Ingrese nombre de usuario
 button.select.another.importfile  =Seleccione otro archivo a importar
@@ -277,9 +273,6 @@ error.login.or.password.incorrect  =Usuario o contrase\u00f1a son incorrectos. S
 register.if.you.want.to.signup  =Si desea registrarse como un nuevo usuario, seleccione "Registraci\u00f3n". Si ya tiene una cuenta, por favor seleccione "Login".
 register.signup.to.lams  =Registraci\u00f3n
 register.login  =Login
-kaltura.select.upload  =Seleccione la pesta\u00f1a Upload para subir v\u00eddeos o webcam para comenzar a grabar webcam. Una vez que haya terminado con esto pulse el bot\u00f3n Siguiente. Asigne un t\u00edtulo a su v\u00eddeo y siga las instrucciones para agregar su video.
-kaltura.error  =Lo sentimos, ha ocurrido un error
-kaltura.upload.error  =Ha ocurrido un error al procesar su video. Por favor reintente nuevamente.
 index.remove.lesson  =Eliminar
 index.remove.lesson.tooltip  =Permanentemente eliminar esta lecci\u00f3n
 label.edit  =Editar
@@ -792,6 +785,52 @@ authoring.fla.readonly.checkbox  =solo-lectura
 authoring.fla.readonly.forbidden  =Esta secuencia es de solo lectura. Si desea modificarlo, puede crear una copia.
 register.email.verify  =Se enviar\u00e1 un correo electr\u00f3nico de confirmaci\u00f3n antes de que pueda iniciar sesi\u00f3n por primera vez.
 signup.email.verify.sent  =Se envi\u00f3 un correo electr\u00f3nico de confirmaci\u00f3n a {0}.</br>Verifique su correo electr\u00f3nico y siga las instrucciones.
+authoring.enable.confidence.levels  =Incluir nivel de confianza
+authoring.fla.page.menu.apply.changes  =Aplicar cambios
+forgot.password.request.processed  =Si el correo electr\u00f3nico / nombre de usuario que ha proporcionado existe, se enviar\u00e1 un correo electr\u00f3nico a la direcci\u00f3n registrada.
+label.view  =Detalle
+index.outcome.manage  =Objetivos de aprendizaje
+index.outcome.manage.tooltip  =Administraci\u00f3n de objetivos de aprendizajey escalas
+outcome.manage.title  =Objetivos de aprendizaje del curso
+outcome.manage.remove  =Eliminar objectivo
+outcome.manage.remove.confirm  =\u00bfEst\u00e1s seguro de que quieres eliminar este objetivos de aprendizaje?
+outcome.manage.add  =A\u00f1adir objetivo
+outcome.manage.edit  =Editar objectivo
+outcome.manage.view  =Ver
+outcome.manage.add.name  =T\u00edtulo
+outcome.manage.add.code  =C\u00f3digo
+outcome.manage.add.description  =Descripci\u00f3n
+outcome.manage.add.global  =Global
+outcome.manage.add.scale  =Escala
+outcome.manage.add.save  =Guardar
+outcome.manage.scope  =Alcance
+outcome.manage.scope.global  =Global
+outcome.manage.scope.course  =Curso
+outcome.manage.add.error  =Error guardando objetivo
+outcome.manage.add.error.name.blank  =T\u00edtulo no puede dejarse en blanco
+outcome.manage.add.error.code.blank  =C\u00f3digo no puede dejarse en blanco
+outcome.manage.add.error.scale.choose  =Debe elegir una escala
+scale.title  =Escalas
+scale.manage  =Administraci\u00f3n de escalas
+scale.manage.add  =Anadir escala
+scale.manage.edit  =Editar escala
+scale.manage.view  =Ver
+scale.manage.title  =Escalas del curso
+scale.manage.remove  =Eliminar escala
+scale.manage.remove.scale  =Error al intentar eliminar la escala. Es probable que est\u00e9 siendo usado por alg\u00fan objetivo.
+scale.manage.remove.confirm  =\u00bfEst\u00e1s seguro de que quiere eliminar esta escala?
+scale.manage.add.value  =Valores
+scale.manage.add.value.info  =Introduzca valores separados por comas en orden creciente de valor. Por ejemplo, una escala A, B, C, D debe ingresarse como D, C, B, A.
+scale.manage.add.value.error.blank  =Un valor no debe estar en blanco
+scale.manage.add.error  =Error al guardar una escala de objetivos de aprendizaje
+outcome.authoring.title  =Objetivos de aprendizaje
+outcome.authoring.input  =Busque y seleccione objetivo por t\u00edtulo o c\u00f3digo
+outcome.authoring.existing  =Objectivos a\u00f1adidos
+outcome.authoring.existing.none  =ninguno
+outcome.export.date  =Exportado en:
+outcome.export  =Exportar
+outcome.import  =Importar
+outcome.import.error  =Error al importar objetivos de aprendizaje o escalas. Revisar los registros.
 
 
-#======= End labels: Exported 786 labels for es ES =====
+#======= End labels: Exported 825 labels for es ES =====
