LDEV-4739 updating labels for monitor
Updating Greek, English and Spanish

--- a/lams_monitoring/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = monitor_java
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue Sep 04 14:23:50 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 00:20:49 CST 2018 
  
 #=================== labels for Monitor (Java) =================# 
 
@@ -241,7 +241,7 @@ learners.order  =Order by completion
 learners.search.phrase.clear.tooltip  =Clear search results
 button.live.edit  =Live Edit
 button.live.edit.tooltip  =Edit the current design for this lesson
-button.live.edit.confirm  =Live Edit allows you to modify the design of your lesson while the learners are attempting it. If you continue, your design will appear in Authoring for you to modify. Once you have done your changes you MUST "Apply Changes" to the design so learners can progress. If these changes are not applied, the learners will NOT be able to continue with the lesson. Do you want to continue?
+button.live.edit.confirm  =Live Edit allows you to modify the design of your lesson while the learners are attempting it. If you continue, your design will appear in Authoring for you to modify. Once you have done your changes you MUST "Apply changes" to the design so learners can progress. If these changes are not applied, the learners will NOT be able to continue with the lesson. Do you want to continue?
 button.journal.entries  =Journal entries
 button.journal.entries.tooltip  =View all Journal Entries saved by Learners
 tab.lesson  =Lesson
@@ -471,6 +471,11 @@ label.seconds  =Seconds
 label.reset  =Reset
 label.time.is.expired  =Time has expired.
 lesson.task.tool  =Tool contribution
+label.person.editing.lesson  ={0} is currently editing this lesson.
+outcome.authoring.title  =Learning outcomes
+outcome.authoring.input  =Search and select by outcome name or code
+outcome.authoring.existing  =Added outcomes
+outcome.authoring.existing.none  =none
 
 
-#======= End labels: Exported 465 labels for en AU =====
+#======= End labels: Exported 470 labels for en AU =====
