--- a/lams_monitoring/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = monitor_java
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue Sep 04 14:21:27 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 00:19:16 CST 2018 
  
 #=================== labels for Monitor (Java) =================# 
 
@@ -470,6 +470,8 @@ label.minutes  =\u039b\u03b5\u03c0\u03c4\u03ac
 label.seconds  =\u0394\u03b5\u03c5\u03c4\u03b5\u03c1\u03cc\u03bb\u03b5\u03c0\u03c4\u03b1
 label.reset  =\u0395\u03c0\u03b1\u03bd\u03b1\u03c6\u03bf\u03c1\u03ac
 label.time.is.expired  =\u039f \u03c7\u03c1\u03cc\u03bd\u03bf\u03c2 \u03ad\u03c7\u03b5\u03b9 \u03bb\u03ae\u03be\u03b5\u03b9.
+lesson.task.tool  =\u03a3\u03c5\u03bd\u03b5\u03b9\u03c3\u03c6\u03bf\u03c1\u03ac \u03b5\u03c1\u03b3\u03b1\u03bb\u03b5\u03af\u03c9\u03bd
+label.person.editing.lesson  =O/H {0} \u03b5\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03ac\u03b6\u03b5\u03c4\u03b1\u03b9 \u03b1\u03c5\u03c4\u03ae \u03c4\u03b7 \u03c3\u03c4\u03b9\u03b3\u03bc\u03ae \u03b1\u03c5\u03c4\u03cc \u03c4\u03bf \u03bc\u03ac\u03b8\u03b7\u03bc\u03b1.
 
 
-#======= End labels: Exported 464 labels for el GR =====
+#======= End labels: Exported 466 labels for el GR =====
