--- a/lams_monitoring/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = monitor_java
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue Sep 04 14:23:47 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 00:22:25 CST 2018 
  
 #=================== labels for Monitor (Java) =================# 
 
@@ -471,6 +471,11 @@ label.seconds  =Segundos
 label.reset  =Reiniciar
 label.time.is.expired  =El tiempo ha finalizado
 lesson.task.tool  =Contribuci\u00f3n para la herramienta
+label.person.editing.lesson  ={0} est\u00e1 editando la lecci\u00f3n.
+outcome.authoring.title  =Objetivos de aprendizaje
+outcome.authoring.input  =Busque y seleccione objetivo por t\u00edtulo o c\u00f3digo
+outcome.authoring.existing  =Objetivos a\u00f1adidos
+outcome.authoring.existing.none  =ninguno
 
 
-#======= End labels: Exported 465 labels for es ES =====
+#======= End labels: Exported 470 labels for es ES =====
