--- a/lams_tool_chat/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_chat/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = chat
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 17:19:44 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 00:27:27 CST 2018 
  
 #=================== labels for Chat =================# 
 
@@ -19,8 +19,6 @@ label.authoring.basic.content  =Content:
 label.authoring.basic.instructions  =Instructions:
 advanced.lockOnFinished  =Lock when finished
 advanced.filteringEnabled  =Filter messages (separate each filtered word with a comma ie: word1, word2, etc)
-instructions.type.online  =Online
-instructions.type.offline  =Offline
 label.filename  =Filename
 label.type  =Type
 link.view  =View
@@ -119,6 +117,10 @@ label.chat.options  =Chat options
 label.activity.completion  =End of activity
 label.notifications  =Notifications
 output.desc.learner.number.of.posts  =Number of posts
+outcome.authoring.title  =Learning outcomes
+outcome.authoring.input  =Search and select by outcome name or code
+outcome.authoring.existing  =Added outcomes
+outcome.authoring.existing.none  =none
 
 
-#======= End labels: Exported 113 labels for en AU =====
+#======= End labels: Exported 115 labels for en AU =====
