--- a/lams_tool_chat/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_chat/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = chat
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 23:52:41 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 00:27:26 CST 2018 
  
 #=================== labels for Chat =================# 
 
@@ -117,6 +117,10 @@ label.chat.options  =Opciones
 label.activity.completion  =Al finalizar actividad
 label.notifications  =Notifications
 output.desc.learner.number.of.posts  =Mensajes
+outcome.authoring.title  =Objetivos de aprendizaje
+outcome.authoring.input  =Busque y seleccione objetivo por t\u00edtulo o c\u00f3digo
+outcome.authoring.existing  =Objetivos a\u00f1adidos
+outcome.authoring.existing.none  =ninguno
 
 
-#======= End labels: Exported 111 labels for es ES =====
+#======= End labels: Exported 115 labels for es ES =====
