LDEV-4739 Updating labels for vote
Updating English, Norwegian, Greek and Spanish

--- a/lams_tool_vote/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_vote/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = voting
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:49:04 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 00:46:38 CST 2018 
  
 #=================== labels for Voting =================# 
 
@@ -161,6 +161,10 @@ label.activity.completion  =Al finalizar actividad
 js.error.validate.number  =Hay un error con el n\u00famero m\u00ednimo y/o m\u00e1ximo de votos. Por favor verifique y haga los cambios necesarios.
 label.search  =Buscar...
 message.monitoring.edit.activity.warning  =Advertencia: si edita y modifica una nominaci\u00f3n que ya ha sido seleccionada, se restablecer\u00e1 a cero, debido a que la nominaci\u00f3n haya cambiado.
+outcome.authoring.title  =Objetivos de aprendizaje
+outcome.authoring.input  =Busque y seleccione objetivo por t\u00edtulo o c\u00f3digo
+outcome.authoring.existing  =Objetivos a\u00f1adidos
+outcome.authoring.existing.none  =ninguno
 
 
-#======= End labels: Exported 155 labels for es ES =====
+#======= End labels: Exported 159 labels for es ES =====
