LDEV-4739 Updating labels for notebook
Updating English, Greek, Norwegian and Spanish

--- a/lams_tool_notebook/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_notebook/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = notebook
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Aug 13 00:21:26 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 00:50:20 CST 2018 
  
 #=================== labels for Notebook =================# 
 
@@ -123,6 +123,10 @@ label.activity.completion  =Al finalizar actividad
 basic.forceResponse  =Respuesta requerida
 message.learner.blank.alertforceResponse  =La respuesta es requerida
 advanced.enable.anonymous.posts  =Habilitar mensajes an\u00f3nimos
+outcome.authoring.title  =Objetivos de aprendizaje
+outcome.authoring.input  =Busque y seleccione objetivo por t\u00edtulo o c\u00f3digo
+outcome.authoring.existing  =Objetivos a\u00f1adidos
+outcome.authoring.existing.none  =ninguno
 
 
-#======= End labels: Exported 117 labels for es ES =====
+#======= End labels: Exported 121 labels for es ES =====
