--- a/lams_tool_survey/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_survey/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = survey
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 23:53:37 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 00:53:43 CST 2018 
  
 #=================== labels for Survey =================# 
 
@@ -54,7 +54,6 @@ label.of  =de
 error.upload.failed  =El archivo {0} no ha podido subirse.
 error.msg.default.content.not.find  =No se ha podido obtener el contenido de defecto para esta actividad
 error.mandatory.question  =Esta pregunta require respuesta.
-msg.no.instruction  =No hay instrucciones disponibles
 authoring.msg.cancel.save  =\u00bfDesea cerrar esta ventana sin guardar cambios?
 label.learning.title  =Encuesta
 label.learning.heading  =Encuesta
@@ -182,6 +181,10 @@ label.activity.completion  =Al finalizar actividad
 label.notifications  =Notificaciones
 label.summary.downloaded=  =Informe descargado
 label.timestamp  =Fecha y hora
+outcome.authoring.title  =Objetivos de aprendizaje
+outcome.authoring.input  =Busque y seleccione objetivo por t\u00edtulo o c\u00f3digo
+outcome.authoring.existing  =Objetivos a\u00f1adidos
+outcome.authoring.existing.none  =ninguno
 
 
-#======= End labels: Exported 176 labels for es ES =====
+#======= End labels: Exported 179 labels for es ES =====
