LDEV-4739 Updating labels for scribe
Updating English, Greek, Norwegian, Español

--- a/lams_tool_scribe/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_scribe/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = scribe
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 23:53:54 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 00:56:40 CST 2018 
  
 #=================== labels for Scribe =================# 
 
@@ -102,6 +102,10 @@ message.learnerInstructions4  =Una vez que todos est\u00e9n de acuerdo, el Escri
 label.scribe.options  =Opciones
 label.activity.completion  =Al finalizar actividad
 advanced.showAggregatedReportsNote  =Nota: solo si esta actividad est\u00e1 agrupada.
+outcome.authoring.title  =Objetivos de aprendizaje
+outcome.authoring.input  =Busque y seleccione objetivo por t\u00edtulo o c\u00f3digo
+outcome.authoring.existing  =Objetivos a\u00f1adidos
+outcome.authoring.existing.none  =ninguno
 
 
-#======= End labels: Exported 96 labels for es ES =====
+#======= End labels: Exported 100 labels for es ES =====
