LDEV-4739 Updating labels for admin
Updating Greek, Spanish and Englisg

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sat Sep 08 03:30:29 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 01:03:25 CST 2018 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -100,7 +100,6 @@ label.spreadsheet  =spreadsheet
 label.download.template  =Download the template
 role.AUTHOR  =Author
 role.AUTHOR.ADMIN  =Author Admin
-role.GROUP.ADMIN  =Course Admin
 role.GROUP.MANAGER  =Course Manager
 role.LEARNER  =Learner
 role.MONITOR  =Monitor
@@ -114,9 +113,9 @@ admin.organisation.code  =Code
 admin.organisation.description  =Description
 admin.organisation.locale  =Locale
 admin.organisation.status  =Status
-admin.can.add.user  =Course Administrators can add new users
-admin.can.browse.user  =Course Administrators can browse all users in the system
-admin.can.change.status  =Course Administrators can change status of course
+admin.can.add.user  =Course managers can add new users
+admin.can.browse.user  =Course managers can browse all users in the system
+admin.can.change.status  =Course managers can change status of course
 admin.organisation  =Course/Subcourse
 admin.course  =Course
 admin.class  =Subcourse
@@ -272,7 +271,6 @@ config.ldap.truststore.password  =SSL certificate password
 config.ldap.learner.map  =Learner role map
 config.ldap.monitor.map  =Monitor role map
 config.ldap.author.map  =Author role map
-config.ldap.group.admin.map  =Course Admin role map
 config.ldap.group.manager.map  =Course Manager role map
 config.ldap.update.on.login  =Update on login
 config.ldap.org.field  =Course field map
@@ -290,7 +288,6 @@ label.learners  =Learners
 label.monitors  =Monitors
 label.authors  =Authors
 label.group.managers  =Course Managers
-label.group.admins  =Course Administrators
 label.sysadmins  =Sysadmins
 label.author.admins  =Author Administrators
 heading.users  =Users
@@ -505,7 +502,6 @@ error.attachment.not.xls  =File is not an Excel .xls file.
 sysadmin.maintain.session  =Logged in users
 sysadmin.maintain.session.login  =Login
 sysadmin.maintain.session.id  =Session ID
-sysadmin.maintain.session.name =Name
 error.portrait.removal.failed  =Unable to delete portrait. See error file for details
 label.delete.portrait  =Delete portrait
 sysadmin.maintain.session.delete  =Delete
@@ -629,10 +625,13 @@ sysadmin.lesson.force.restart  =Learners always start from the first activity
 sysadmin.lesson.allow.restart  =Learners can restart the lesson
 sysadmin.lesson.default  =Lesson default settings
 config.enable.portrait.editing  =Enable profile portrait editing
-admin.outcome.title =Outcomes management
-outcome.authoring.title =Learning outcomes
-outcome.authoring.input =Search and select by outcome name or code
-outcome.authoring.existing =Added outcomes
-outcome.authoring.existing.none =none
 label.search  =Search...
-#======= End labels: Exported 629 labels for en AU =====
+config.enable.forgot.your.password.link  =Enable "Forgot your password" link at the login page
+admin.outcome.title  =Outcomes management
+outcome.authoring.title  =Learning outcomes
+outcome.authoring.input  =Search and select by outcome name or code
+outcome.authoring.existing  =Added outcomes
+outcome.authoring.existing.none  =none
+
+
+#======= End labels: Exported 626 labels for en AU =====
