--- a/lams_admin/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sat Sep 08 03:25:33 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 00:59:32 CST 2018 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -100,7 +100,6 @@ label.spreadsheet  =\u03c5\u03c0\u03bf\u03bb\u03bf\u03b3\u03b9\u03c3\u03c4\u03b9
 label.download.template  =\u039b\u03ae\u03c8\u03b7 \u03c0\u03c1\u03bf\u03c4\u03cd\u03c0\u03bf\u03c5
 role.AUTHOR  =\u03a3\u03c5\u03b3\u03b3\u03c1\u03b1\u03c6\u03ad\u03b1\u03c2
 role.AUTHOR.ADMIN  =\u0394\u03b9\u03b1\u03c7\u03b5\u03b9\u03c1\u03b9\u03c3\u03c4\u03ae\u03c2 \u03a3\u03c5\u03b3\u03b3\u03c1\u03b1\u03c6\u03ad\u03c9\u03bd
-role.GROUP.ADMIN  =\u0392\u03bf\u03b7\u03b8\u03cc\u03c2 \u0394\u03b9\u03b1\u03c7. \u039f\u03bc\u03ac\u03b4\u03b1\u03c2
 role.GROUP.MANAGER  =\u0394\u03b9\u03b1\u03c7\u03b5\u03b9\u03c1\u03b9\u03c3\u03c4\u03ae\u03c2 \u039f\u03bc\u03ac\u03b4\u03b1\u03c2
 role.LEARNER  =\u0395\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03c2
 role.MONITOR  =\u0395\u03c0\u03cc\u03c0\u03c4\u03b7\u03c2
@@ -272,7 +271,6 @@ config.ldap.truststore.password  =SSL Certificate Password
 config.ldap.learner.map  =\u03a7\u03ac\u03c1\u03c4\u03b7\u03c2 \u03c1\u03cc\u03bb\u03c9\u03bd \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03c5
 config.ldap.monitor.map  =\u0391\u03bd\u03c4\u03b9\u03c3\u03c4\u03bf\u03af\u03c7\u03b9\u03c3\u03b7 \u03a1\u03cc\u03bb\u03c9\u03bd \u0394\u03b9\u03b1\u03c7\u03b5\u03b9\u03c1\u03b9\u03c3\u03c4\u03ae
 config.ldap.author.map  =\u0391\u03bd\u03c4\u03b9\u03c3\u03c4\u03bf\u03af\u03c7\u03b9\u03c3\u03b7 \u03a1\u03cc\u03bb\u03c9\u03bd \u03a3\u03c5\u03b3\u03b3\u03c1\u03b1\u03c6\u03ad\u03c9\u03bd
-config.ldap.group.admin.map  =\u03a7\u03ac\u03c1\u03c4\u03b7\u03c2 \u03a1\u03cc\u03bb\u03bf\u03c5 \u0392\u03bf\u03b7\u03b8\u03bf\u03cd \u0394\u03b9\u03b1\u03c7. \u039f\u03bc\u03ac\u03b4\u03b1\u03c2
 config.ldap.group.manager.map  =\u03a7\u03ac\u03c1\u03c4\u03b7\u03c2 \u03a1\u03cc\u03bb\u03c9\u03bd \u0394\u03b9\u03b1\u03c7\u03b5\u03b9\u03c1\u03b9\u03c3\u03c4\u03ce\u03bd \u039f\u03bc\u03ac\u03b4\u03b1\u03c2
 config.ldap.update.on.login  =\u0395\u03bd\u03b7\u03bc\u03ad\u03c1\u03c9\u03c3\u03b7 \u03c3\u03c4\u03b7\u03bd \u0395\u03af\u03c3\u03bf\u03b4\u03bf
 config.ldap.org.field  =\u0391\u03bd\u03c4\u03b9\u03c3\u03c4\u03bf\u03af\u03c7\u03b9\u03c3\u03b7 \u03a0\u03b5\u03b4\u03af\u03c9\u03bd \u039f\u03bc\u03ac\u03b4\u03c9\u03bd
@@ -290,7 +288,6 @@ label.learners  =\u0395\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u0
 label.monitors  =\u0395\u03c0\u03cc\u03c0\u03c4\u03b5\u03c2
 label.authors  =\u03a3\u03c5\u03b3\u03b3\u03c1\u03b1\u03c6\u03b5\u03af\u03c2
 label.group.managers  =\u0394\u03b9\u03b1\u03c7\u03b5\u03b9\u03c1\u03b9\u03c3\u03c4\u03ad\u03c2 \u039f\u03bc\u03ac\u03b4\u03b1\u03c2
-label.group.admins  =\u0392\u03bf\u03b7\u03b8\u03bf\u03af \u0394\u03b9\u03b1\u03c7. \u039f\u03bc\u03ac\u03b4\u03b1\u03c2
 label.sysadmins  =\u0394\u03b9\u03b1\u03c7. \u03a3\u03c5\u03c3\u03c4\u03ae\u03bc\u03b1\u03c4\u03bf\u03c2 (Sysadmins)
 label.author.admins  =\u0394\u03b9\u03b1\u03c7\u03b5\u03b9\u03c1\u03b9\u03c3\u03c4\u03ad\u03c2 \u03a3\u03c5\u03b3\u03b3\u03c1\u03b1\u03c6\u03ad\u03c9\u03bd
 heading.users  =\u03a7\u03c1\u03ae\u03c3\u03c4\u03b5\u03c2
@@ -401,13 +398,6 @@ admin.servertimezone.name  =\u038c\u03bd\u03bf\u03bc\u03b1: {0}
 admin.servertimezone.select  =\u0395\u03c0\u03b9\u03bb\u03ad\u03be\u03c4\u03b5
 config.profile.edit.enable  =\u0395\u03bd\u03b5\u03c1\u03b3\u03bf\u03c0\u03bf\u03af\u03b7\u03c3\u03b7 \u03b5\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1\u03c2 \u03c0\u03c1\u03bf\u03c6\u03af\u03bb
 config.profile.partial.edit.enable  =\u0395\u03af\u03bd\u03b1\u03b9 \u03b4\u03c5\u03bd\u03b1\u03c4\u03ae \u03b7 \u03bc\u03b5\u03c1\u03b9\u03ba\u03ae \u03b5\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1 \u03c0\u03c1\u03bf\u03c6\u03af\u03bb (\u03bc\u03cc\u03bd\u03bf e-mail \u03ba\u03b1\u03b9 \u03c4\u03b7\u03bb\u03ad\u03c6\u03c9\u03bd\u03bf \u03b5\u03c0\u03b9\u03ba\u03bf\u03b9\u03bd\u03c9\u03bd\u03af\u03b1\u03c2 \u03bc\u03c0\u03bf\u03c1\u03bf\u03cd\u03bd \u03bd\u03b1 \u03b1\u03bb\u03bb\u03b1\u03c7\u03b8\u03bf\u03cd\u03bd)
-config.header.kaltura  =\u03a1\u03c5\u03b8\u03bc\u03af\u03c3\u03b5\u03b9\u03c2 Kaltura
-config.kaltura.server  =URL \u03b5\u03be\u03c5\u03c0\u03b7\u03c1\u03b5\u03c4\u03b7\u03c4\u03ae Kaltura
-config.kaltura.partner.id  =\u03a4\u03b1\u03c5\u03c4\u03cc\u03c4\u03b7\u03c4\u03b1 \u0395\u03c4\u03b1\u03af\u03c1\u03bf\u03c5
-config.kaltura.sub.partner.id  =\u03a4\u03b1\u03c5\u03c4\u03cc\u03c4\u03b7\u03c4\u03b1 \u03a3\u03c5\u03bd\u03b5\u03c4\u03b1\u03af\u03c1\u03bf\u03c5
-config.kaltura.user.secret  =M\u03c5\u03c3\u03c4\u03b9\u03ba\u03cc \u03c7\u03c1\u03ae\u03c3\u03c4\u03b7
-config.kaltura.kcw.uiconfid  =\u03a3\u03c5\u03bc\u03b2\u03bf\u03bb\u03ae \u039f\u03b4\u03b7\u03b3\u03bf\u03cd Kaltura (KCW)
-config.kaltura.kdp.uiconfid  =\u0394\u03c5\u03bd\u03b1\u03bc\u03b9\u03ba\u03cc\u03c2 \u0391\u03bd\u03b1\u03c0\u03b1\u03c1\u03b1\u03b3\u03c9\u03b3\u03ad\u03b1\u03c2 Kaltura(KDP)
 config.server2server.registration.enable  =\u0395\u03bd\u03b5\u03c1\u03b3\u03bf\u03c0\u03bf\u03af\u03b7\u03c3\u03b7 \u03b1\u03c0\u03bf\u03bc\u03b1\u03ba\u03c1\u03c5\u03c3\u03bc\u03ad\u03bd\u03b7\u03c2 \u03b5\u03b3\u03b3\u03c1\u03b1\u03c6\u03ae\u03c2 \u03c7\u03c1\u03ae\u03c3\u03c4\u03b7 \u03c3\u03c4\u03bf \u03b4\u03b9\u03b1\u03ba\u03bf\u03bc\u03b9\u03c3\u03c4\u03ae
 admin.enable.course.notifications  =\u0395\u03bd\u03b5\u03c1\u03b3\u03bf\u03c0\u03bf\u03af\u03b7\u03c3\u03b7 \u0395\u03b9\u03b4\u03bf\u03c0\u03bf\u03b9\u03ae\u03c3\u03b5\u03c9\u03bd \u039f\u03c1\u03b3\u03b1\u03bd\u03b9\u03c3\u03bc\u03bf\u03cd
 cache.entries.title2  =Cacheable \u03bf\u03bd\u03c4\u03cc\u03c4\u03b7\u03c4\u03b5\u03c2
@@ -634,6 +624,9 @@ sysadmin.lesson.im  =\u0395\u03bd\u03b5\u03c1\u03b3\u03bf\u03c0\u03bf\u03af\u03b
 sysadmin.lesson.force.restart  =\u039f\u03b9 \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03b9 \u03b1\u03c1\u03c7\u03af\u03b6\u03bf\u03c5\u03bd \u03c0\u03ac\u03bd\u03c4\u03b1 \u03b1\u03c0\u03cc \u03c4\u03b7\u03bd \u03c0\u03c1\u03ce\u03c4\u03b7 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1
 sysadmin.lesson.allow.restart  =\u039f\u03b9 \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03b9 \u03bc\u03c0\u03bf\u03c1\u03bf\u03cd\u03bd \u03bd\u03b1 \u03be\u03b1\u03bd\u03b1\u03c1\u03c7\u03af\u03c3\u03bf\u03c5\u03bd \u03c4\u03bf \u03bc\u03ac\u03b8\u03b7\u03bc\u03b1 \u03b1\u03c0\u03cc \u03c4\u03b7\u03bd \u03b1\u03c1\u03c7\u03ae
 sysadmin.lesson.default  =\u03a0\u03c1\u03bf\u03b5\u03c0\u03b9\u03bb\u03b5\u03b3\u03bc\u03ad\u03bd\u03b5\u03c2 \u03c1\u03c5\u03b8\u03bc\u03af\u03c3\u03b5\u03b9\u03c2 \u03bc\u03b1\u03b8\u03ae\u03bc\u03b1\u03c4\u03bf\u03c2
+config.enable.portrait.editing  =\u0395\u03bd\u03b5\u03c1\u03b3\u03bf\u03c0\u03bf\u03af\u03b7\u03c3\u03b7 \u03b5\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1\u03c2 \u03c0\u03c1\u03bf\u03c6\u03af\u03bb \u03c0\u03bf\u03c1\u03c4\u03c1\u03ad\u03c4\u03bf\u03c5
+label.search  =\u0391\u03bd\u03b1\u03b6\u03ae\u03c4\u03b7\u03c3\u03b7...
+config.enable.forgot.your.password.link  =\u0395\u03bd\u03b5\u03c1\u03b3\u03bf\u03c0\u03bf\u03b9\u03ae\u03c3\u03c4\u03b7 \u03c4\u03bf\u03c5 \u03c3\u03c5\u03bd\u03b4\u03ad\u03c3\u03bc\u03bf\u03c5 "\u039e\u03b5\u03c7\u03ac\u03c3\u03b1\u03c4\u03b5 \u03c4\u03bf\u03bd \u03ba\u03c9\u03b4\u03b9\u03ba\u03cc \u03c0\u03c1\u03cc\u03c3\u03b2\u03b1\u03c3\u03ae\u03c2 \u03c3\u03b1\u03c2" \u03c3\u03c4\u03b7 \u03c3\u03b5\u03bb\u03af\u03b4\u03b1 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7\u03c2
 
 
-#======= End labels: Exported 628 labels for el GR =====
+#======= End labels: Exported 621 labels for el GR =====
