--- a/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sat Sep 08 03:30:29 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 01:03:25 CST 2018 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -100,7 +100,6 @@ label.spreadsheet  =spreadsheet
 label.download.template  =Download the template
 role.AUTHOR  =Author
 role.AUTHOR.ADMIN  =Author Admin
-role.GROUP.ADMIN  =Course Admin
 role.GROUP.MANAGER  =Course Manager
 role.LEARNER  =Learner
 role.MONITOR  =Monitor
@@ -114,9 +113,9 @@ admin.organisation.code  =Code
 admin.organisation.description  =Description
 admin.organisation.locale  =Locale
 admin.organisation.status  =Status
-admin.can.add.user  =Course Administrators can add new users
-admin.can.browse.user  =Course Administrators can browse all users in the system
-admin.can.change.status  =Course Administrators can change status of course
+admin.can.add.user  =Course managers can add new users
+admin.can.browse.user  =Course managers can browse all users in the system
+admin.can.change.status  =Course managers can change status of course
 admin.organisation  =Course/Subcourse
 admin.course  =Course
 admin.class  =Subcourse
@@ -272,7 +271,6 @@ config.ldap.truststore.password  =SSL certificate password
 config.ldap.learner.map  =Learner role map
 config.ldap.monitor.map  =Monitor role map
 config.ldap.author.map  =Author role map
-config.ldap.group.admin.map  =Course Admin role map
 config.ldap.group.manager.map  =Course Manager role map
 config.ldap.update.on.login  =Update on login
 config.ldap.org.field  =Course field map
@@ -290,7 +288,6 @@ label.learners  =Learners
 label.monitors  =Monitors
 label.authors  =Authors
 label.group.managers  =Course Managers
-label.group.admins  =Course Administrators
 label.sysadmins  =Sysadmins
 label.author.admins  =Author Administrators
 heading.users  =Users
@@ -401,13 +398,6 @@ admin.servertimezone.name  =Name: {0}
 admin.servertimezone.select  =Select
 config.profile.edit.enable  =Enable profile editing
 config.profile.partial.edit.enable  =Enable partial profile editing (only email and contact number can be changed)
-config.header.kaltura  =Kaltura settings
-config.kaltura.server  =Kaltura server URL
-config.kaltura.partner.id  =Partner Id
-config.kaltura.sub.partner.id  =Subpartner Id
-config.kaltura.user.secret  =User secret
-config.kaltura.kcw.uiconfid  =Kaltura Contribution Wizard (KCW) ui config id
-config.kaltura.kdp.uiconfid  =Kaltura Dynamic Player (KDP) ui config id
 config.server2server.registration.enable  =Enable remote server user registration
 admin.enable.course.notifications  =Enable organisation notifications
 cache.entries.title2  =Cacheable entities
@@ -635,7 +625,13 @@ sysadmin.lesson.force.restart  =Learners always start from the first activity
 sysadmin.lesson.allow.restart  =Learners can restart the lesson
 sysadmin.lesson.default  =Lesson default settings
 config.enable.portrait.editing  =Enable profile portrait editing
+label.search  =Search...
 config.enable.forgot.your.password.link  =Enable "Forgot your password" link at the login page
+admin.outcome.title  =Outcomes management
+outcome.authoring.title  =Learning outcomes
+outcome.authoring.input  =Search and select by outcome name or code
+outcome.authoring.existing  =Added outcomes
+outcome.authoring.existing.none  =none
 
 
-#======= End labels: Exported 629 labels for en AU =====
+#======= End labels: Exported 626 labels for en AU =====
