--- a/lams_admin/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sat Sep 08 03:30:10 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 01:03:21 CST 2018 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -100,7 +100,6 @@ label.spreadsheet  =Hoja de C\u00e1lculo
 label.download.template  =Descargar Plantilla
 role.AUTHOR  =Autor
 role.AUTHOR.ADMIN  =Administrador Autor
-role.GROUP.ADMIN  =Administrador de la Clase
 role.GROUP.MANAGER  =Manager de la Clase
 role.LEARNER  =Estudiante
 role.MONITOR  =Instructor/Tutor
@@ -272,7 +271,6 @@ config.ldap.truststore.password  =Contrase\u00f1a del Certificado SSL
 config.ldap.learner.map  =Mapeo del Rol de Estudiante
 config.ldap.monitor.map  =Mapeo del Rol de Instructor/Tutor
 config.ldap.author.map  =Mapeo del Rol de Instructor/Autor
-config.ldap.group.admin.map  =Mapeo del Rol de Administrador de clase
 config.ldap.group.manager.map  =Mapeo del Rol de Gestionador de Clase
 config.ldap.update.on.login  =Sincronizar al logearse
 config.ldap.org.field  =Mapa del campo clase
@@ -290,7 +288,6 @@ label.learners  =Estudiantes
 label.monitors  =Tutores
 label.authors  =Instructores
 label.group.managers  =Gestionadores de Clase
-label.group.admins  =Administradores de Clase
 label.sysadmins  =Administradores del Sistema
 label.author.admins  =Administradores de Instructores
 heading.users  =Usuarios
@@ -401,13 +398,6 @@ admin.servertimezone.name  =Name: {0}
 admin.servertimezone.select  =Seleccionar
 config.profile.edit.enable  =Habilitar a los usuarios editar su perfil
 config.profile.partial.edit.enable  =Habilitar a los usuarios editar datos de contacto en su perfil (solamente correo electr\u00f3nico y tel\u00e9fonos son editables)
-config.header.kaltura  =Configuraci\u00f3n Kaltura
-config.kaltura.server  =URL del servidor Kaltura
-config.kaltura.partner.id  =Partner Id
-config.kaltura.sub.partner.id  =Subpartner Id
-config.kaltura.user.secret  =Secreto de usuario (User secret)
-config.kaltura.kcw.uiconfid  =Kaltura Contribution Wizard (KCW) ui config id
-config.kaltura.kdp.uiconfid  =Kaltura Dynamic Player (KDP) ui config id
 config.server2server.registration.enable  =Activar registraci\u00f3n de usuarios remota
 admin.enable.course.notifications  =Habilitar notificaciones para el curso
 cache.entries.title2  =Entidades en del cache
@@ -635,6 +625,13 @@ sysadmin.lesson.force.restart  =Empezar lecci\u00f3n siempre desde la primer act
 sysadmin.lesson.allow.restart  =Activar opci\u00f3n para recomenzar la lecci\u00f3n desde el principio
 sysadmin.lesson.default  =Configuraci\u00f3n predeterminada de la lecciones
 config.enable.portrait.editing  =Permitir editar foto de perfil.
+label.search  =Buscar...
+config.enable.forgot.your.password.link  =Habilitar el enlace "Olvid\u00f3 su contrase\u00f1a" en la p\u00e1gina de inicio de sesi\u00f3n
+admin.outcome.title  =Administraci\u00f3n de objectivos de aprendizaje
+outcome.authoring.title  =Objetivos de aprendizaje
+outcome.authoring.input  =Busque y seleccione objetivo por t\u00edtulo o c\u00f3digo
+outcome.authoring.existing  =Objetivos a\u00f1adidos
+outcome.authoring.existing.none  =ninguno
 
 
-#======= End labels: Exported 629 labels for es ES =====
+#======= End labels: Exported 626 labels for es ES =====
